# math-neon

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  math_atan2f.c  math_cosf.c  math_debug.c  math_neon.h  math_sqrtfv.c  math_vec4.c
